fix(test): update expected sequence values after seed data
Update DatabaseJobCodeSequenceProviderTest expected sequence numbers
to account for seed data that already uses sequences 1-3.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>